--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -19,7 +19,7 @@
   border-top: 1px solid #ddd !important;
   margin: 0 !important;
 }
-.section-header-semibold {
+.section-heading-semibold {
   font-size: 22px !important;
   line-height: 26px !important;
   font-weight: 600 !important;
@@ -4388,13 +4388,13 @@
   position: relative !important;
   z-index: 0 !important;
 }
-.section-header-mobile {
+.section-heading-mobile {
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
     Helvetica Neue, sans-serif !important;
   font-weight: 400 !important;
   margin-bottom: 16px !important;
 }
-.section-header-title-wrapper-mobile {
+.section-heading-title-wrapper-mobile {
   -webkit-box-align: baseline !important;
   -ms-flex-align: baseline !important;
   -webkit-box-pack: justify !important;
@@ -4409,7 +4409,7 @@
   display: -webkit-inline-flex !important;
   display: inline-flex !important;
 }
-.section-header-title-mobile {
+.section-heading-title-mobile {
   font-size: 22px !important;
   font-weight: 800 !important;
   line-height: 26px !important;
@@ -38751,7 +38751,7 @@ tr.show-desktop {
   height: 8px !important;
   background-color: #ebebeb !important;
 }
-.section-header-semibold {
+.section-heading-semibold {
   font-size: 22px !important;
   line-height: 26px !important;
   font-weight: 600 !important;
