--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -270,7 +270,7 @@
   margin: 24px 0 !important;
   padding-top: 16px !important;
 }
-._ek22ai {
+.footer__main {
   margin-top: 16px !important;
   padding: 24px 0 !important;
 }
@@ -8795,7 +8795,7 @@ select[disabled] {
     max-width: 1440px !important;
   }
 }
-._1nim4pq {
+.experiences__container {
   display: -webkit-box !important;
   display: -moz-box !important;
   display: -ms-flexbox !important;
@@ -8817,21 +8817,21 @@ select[disabled] {
   padding-right: calc((100vw - 100%) / 2) !important;
   scrollbar-width: none !important;
 }
-._1nim4pq::-webkit-scrollbar {
+.experiences__container::-webkit-scrollbar {
   display: none !important;
 }
-._1nim4pq::after {
+.experiences__container::after {
   content: '' !important;
   padding-right: -webkit-calc((100vw - 100%)/ 2) !important;
   padding-right: -moz-calc((100vw - 100%)/ 2) !important;
   padding-right: calc((100vw - 100%) / 2) !important;
 }
 @media (min-width: 1128px) {
-  ._1nim4pq::after {
+  .experiences__container::after {
     padding-right: 0 !important;
   }
 }
-._vmvjtb {
+.experiences__wrapper {
   -ms-grid-columns: repeat(5, 243px) !important;
   display: -ms-grid !important;
   display: grid !important;
@@ -8839,7 +8839,7 @@ select[disabled] {
   grid-row-gap: 24px !important;
   grid-column-gap: 16px !important;
 }
-._10tr6w4 {
+.experiences__header-h2 {
   color: #222 !important;
   font-weight: 600 !important;
   font-size: 26px !important;
@@ -8847,12 +8847,12 @@ select[disabled] {
   margin-bottom: 0 !important;
 }
 @media (max-width: 743px) {
-  ._10tr6w4 {
+  .experiences__header-h2 {
     font-size: 22px !important;
     line-height: 26px !important;
   }
 }
-._syjxre {
+.experiences__header {
   margin-bottom: 20px !important;
 }
 .find__local-d-initial[class][class] {
@@ -8876,16 +8876,16 @@ select[disabled] {
     transition: none;
   }
 }
-.dir.by8bwev[class][class] {
+.dir.button__padding-xy[class][class] {
   padding: 13px 23px !important;
 }
 @media (min-width: 744px) {
-  .by8bwev[class][class] {
+  .button__padding-xy[class][class] {
     display: inline-block !important;
     width: auto !important;
   }
 }
-.b120n5ee[class][class] {
+.button__border[class][class] {
   color: var(--f-k-smk-x);
   display: flex;
   justify-content: center;
@@ -8895,7 +8895,7 @@ select[disabled] {
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
 }
-.dir.b120n5ee[class][class] {
+.dir.button__border[class][class] {
   border-radius: var(--go-h-jh-l);
   border-width: 1px;
   border-style: solid;
@@ -8903,15 +8903,15 @@ select[disabled] {
   padding: 8px 16px;
 }
 @media (min-width: 744px) {
-  .b120n5ee[class][class] {
+  .button__border[class][class] {
     width: auto;
   }
 }
-.i1spkgrq[class][class] {
+.button__icon[class][class] {
   position: relative;
   display: inline-block;
 }
-.dir-ltr.i1spkgrq[class][class] {
+.dir-ltr.button__icon[class][class] {
   right: -4px;
 }
 ._r16tng {
@@ -9424,11 +9424,11 @@ select[disabled] {
     }
   }
 }
-._ek22ai {
+.footer__main {
   margin-bottom: 64px;
   padding: 32px !important;
 }
-._w688nhn {
+.footer__menu {
   margin: 0 !important;
   overflow-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -9439,7 +9439,7 @@ select[disabled] {
   color: #767676 !important;
   text-align: center !important;
 }
-._11hau3k {
+.footer__menu-ul {
   margin: 0 !important;
   padding: 0 !important;
 }
@@ -10056,38 +10056,38 @@ h3:first-child {
     }
   }
 }
-.gh7uyir[class][class] {
+.card__slides-container[class][class] {
   margin-block: var(--ikx-k-pe);
   --breakpoint-grid_column-gap: var(--ikx-k-pe);
   --breakpoint-grid_row-gap: var(--f-fw-z-a-i);
   --breakpoint-grid_columns: 1;
 }
 @media (min-width: 1128px) {
-  .gh7uyir[class][class] {
+  .card__slides-container[class][class] {
     margin-block: var(--fgg-f-l-a) var(--kksqe-v);
   }
 }
 @media (min-width: 550px) {
-  .gh7uyir[class][class] {
+  .card__slides-container[class][class] {
     --breakpoint-grid_columns: 2;
   }
 }
 @media (min-width: 950px) {
-  .gh7uyir[class][class] {
+  .card__slides-container[class][class] {
     --breakpoint-grid_columns: 3;
   }
 }
 @media (min-width: 1128px) {
-  .gh7uyir[class][class] {
+  .card__slides-container[class][class] {
     --breakpoint-grid_columns: 4;
   }
 }
 @media (min-width: 1606px) {
-  .gh7uyir[class][class] {
+  .card__slides-container[class][class] {
     --breakpoint-grid_columns: 5;
   }
 }
-.g14v8520[class][class] {
+.card__slides-container-grid[class][class] {
   display: grid;
   grid-auto-rows: minmax(min-content, max-content);
   grid-gap: var(--breakpoint-grid_row-gap, 0)
@@ -10098,7 +10098,7 @@ h3:first-child {
   );
 }
 @media (min-width: 744px) {
-  .g14v8520[class][class] {
+  .card__slides-container-grid[class][class] {
     grid-auto-rows: minmax(0, 1fr);
   }
 }
@@ -20467,7 +20467,7 @@ full__margin-bottom {
     -webkit-transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955),
     transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
 }
-._w99wiq {
+.button__mt-24 {
   margin-top: 24px !important;
 }
 ._15ubz5yg {
@@ -39997,7 +39997,7 @@ tr.show-desktop {
   visibility: hidden;
 }
 
-.dir.a1stauiv[class][class] {
+.dir.animation-name-dismiss[class][class] {
   animation-name: dismiss;
 }
 
@@ -51552,7 +51552,7 @@ a:hover {
   font-size: 26px !important;
   line-height: 30px !important;
 }
-._152qbzi {
+.margin__bottom-24 {
   margin-bottom: 24px !important;
 }
 ._7qynsb1 {
