Rename header__search where-recent where-region

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -7598,7 +7598,7 @@ select[disabled] {
     width: 50% !important;
   }
 }
-._1x0xu65p:after {
+.header__search-tabs-filter-body-where-region-item-img-border:after {
   content: '' !important;
   width: -webkit-calc(100% + 2px) !important;
   width: -moz-calc(100% + 2px) !important;
@@ -7615,7 +7615,7 @@ select[disabled] {
   border-width: 3px !important;
   border-radius: inherit !important;
 }
-._bi7q1f {
+.header__search-tabs-filter-body-where-region-item-btn {
   cursor: pointer !important;
   text-align: center !important;
   border: 1px solid #ddd !important;
@@ -7642,50 +7642,50 @@ select[disabled] {
   width: 100% !important;
   -webkit-tap-highlight-color: transparent !important;
 }
-._bi7q1f:disabled {
+.header__search-tabs-filter-body-where-region-item-btn:disabled {
   cursor: not-allowed !important;
   color: #ddd !important;
   border-color: #ebebeb !important;
 }
 @media (hover: hover) {
-  ._bi7q1f:disabled:hover {
+  .header__search-tabs-filter-body-where-region-item-btn:disabled:hover {
     color: #ddd !important;
     border-color: #ebebeb !important;
   }
 }
-._bi7q1f:disabled:active {
+.header__search-tabs-filter-body-where-region-item-btn:disabled:active {
   color: #ddd !important;
   border-color: #ebebeb !important;
   -webkit-transform: none !important;
   -ms-transform: none !important;
   transform: none !important;
 }
-._bi7q1f:active {
+.header__search-tabs-filter-body-where-region-item-btn:active {
   color: #000 !important;
   border-color: #000 !important;
   -webkit-transform: scale(0.925) !important;
   -ms-transform: scale(0.925) !important;
   transform: scale(0.925) !important;
 }
-._bi7q1f::-moz-focus-inner {
+.header__search-tabs-filter-body-where-region-item-btn::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._bi7q1f:focus::-moz-focus-inner {
+.header__search-tabs-filter-body-where-region-item-btn:focus::-moz-focus-inner {
   border: none !important;
 }
-._bi7q1f:-moz-focusring {
+.header__search-tabs-filter-body-where-region-item-btn:-moz-focusring {
   outline: 0 !important;
 }
-._bi7q1f:focus-visible {
+.header__search-tabs-filter-body-where-region-item-btn:focus-visible {
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._bi7q1f:focus-visible {
+  .header__search-tabs-filter-body-where-region-item-btn:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
@@ -10311,37 +10311,37 @@ h3:first-child {
   bottom: 149px !important;
   left: 0 !important;
 }
-._1s4do1s {
+.header__search-tabs-filter-body-where-recent-items {
   margin: 0 0 16px !important;
   padding: 0 !important;
 }
-._19v1su91 {
+.header__search-tabs-filter-body-where-recent-label {
   list-style-type: none !important;
   margin: 0 !important;
   padding: 8px 24px !important;
 }
 @media (min-width: 744px) {
-  ._19v1su91 {
+  .header__search-tabs-filter-body-where-recent-label {
     padding-bottom: 18px !important;
   }
 }
-._12fzrr2 {
+.header__search-tabs-filter-body-where-recent-label-text {
   font-size: 14px !important;
   line-height: 18px !important;
   font-weight: 700 !important;
 }
-._uzocf2 {
+.header__search-tabs-filter-body-where-recent-item {
   cursor: pointer !important;
   list-style-type: none !important;
   width: 100% !important;
   display: flex !important;
   padding: 8px 32px 8px 24px !important;
 }
-._uzocf2:hover {
+.header__search-tabs-filter-body-where-recent-item:hover {
   background-color: #f7f7f7;
   border-color: #f7f7f7;
 }
-._bi8puq {
+.header__search-tabs-filter-body-where-recent-item-icon {
   -webkit-box-pack: center !important;
   -webkit-box-align: center !important;
   font-size: 17px !important;
@@ -10354,7 +10354,7 @@ h3:first-child {
   align-items: center !important;
   justify-content: center !important;
 }
-._1825a1k {
+.header__search-tabs-filter-body-where-recent-item-label {
   -webkit-box-pack: center !important;
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
@@ -10363,7 +10363,7 @@ h3:first-child {
   flex-direction: column !important;
   justify-content: center !important;
 }
-._r1t6ga {
+.header__search-tabs-filter-body-where-recent-item-location {
   font-size: 16px !important;
   line-height: 20px !important;
   font-weight: 500 !important;
@@ -10375,18 +10375,18 @@ h3:first-child {
   -webkit-box-orient: vertical !important;
 }
 @supports (overflow: clip) {
-  ._r1t6ga {
+  .header__search-tabs-filter-body-where-recent-item-location {
     overflow: clip !important;
   }
 }
-._i1xie3 {
+.header__search-tabs-filter-body-where-recent-item-date {
   font-size: 12px !important;
   line-height: 16px !important;
   font-weight: 400 !important;
   color: #717171 !important;
 }
 @media (hover: hover) {
-  ._bi7q1f:hover {
+  .header__search-tabs-filter-body-where-region-item-btn:hover {
     color: #000 !important;
     border-color: #000 !important;
   }
@@ -11193,7 +11193,7 @@ h3:first-child {
   color: #222 !important;
   border: none !important;
 }
-._1x0xu65p::after,
+.header__search-tabs-filter-body-where-region-item-img-border::after,
 ._as2q9p7::after {
   content: '' !important;
   width: calc(100% + 2px) !important;
@@ -17609,11 +17609,11 @@ h3:first-child {
   font-weight: var(--h-oqhch);
   letter-spacing: var(--mq-yk-l);
 }
-.k3s7ijn[class][class] {
+.header__search-tabs-filter-body-where-container[class][class] {
   display: flex;
   max-width: 848px;
 }
-.d9jpnbz[class][class] {
+.header__search-tabs-filter-body-where-region-item-contents[class][class] {
   column-gap: 5px;
   display: grid;
   flex-wrap: wrap;
@@ -18718,7 +18718,7 @@ h3:first-child {
   right: 0;
   left: 0;
 }
-.c1nifi44[class][class] {
+.header__search-tabs-filter-body[class][class] {
   position: absolute;
   top: 100%;
   z-index: 1;
@@ -21614,13 +21614,13 @@ full__margin-bottom {
 .dir.header__search-tabs-item-btn[class][class]:active {
   transform: none;
 }
-.cbt5pty[class][class] {
+.header__search-tabs-filter-body-where-region-item-content[class][class] {
   display: flex;
   flex-direction: column;
   height: 100%;
   width: 100%;
 }
-.i17d61fu[class][class] {
+.header__search-tabs-filter-body-where-region-item-img[class][class] {
   display: flex;
   height: 100%;
   width: 100%;
@@ -25185,7 +25185,7 @@ html :where(img[class*='wp-image-']) {
 .dir-rtl.rxmx7fe[class][class] {
   left: 0;
 }
-.dir.c1nifi44[class][class] {
+.dir.header__search-tabs-filter-body[class][class] {
   background: var(--f-mkcy-f);
   border-radius: 32px;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.04), 0 8px 16px rgba(0, 0, 0, 0.15);
@@ -25513,43 +25513,43 @@ html :where(img[class*='wp-image-']) {
 .dir.header__search-tabs-filter-where-input-label[class][class] {
   padding-bottom: 2px;
 }
-.k3s7ijn[class][class] {
+.header__search-tabs-filter-body-where-container[class][class] {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   max-width: 848px;
 }
-.dir.k3s7ijn[class][class] {
+.dir.header__search-tabs-filter-body-where-container[class][class] {
   padding: 16px 8px 24px;
   margin: 0 -32px -8px;
 }
-.krm8eud[class][class] {
+.header__search-tabs-filter-body-where-recent[class][class] {
   min-width: 345px;
 }
-.dir-ltr.krm8eud[class][class] {
+.dir-ltr.header__search-tabs-filter-body-where-recent[class][class] {
   padding-left: 8px;
 }
-.dir-rtl.krm8eud[class][class] {
+.dir-rtl.header__search-tabs-filter-body-where-recent[class][class] {
   padding-right: 8px;
 }
 .kn3kizz[class][class] {
   width: 390px;
 }
-.dir-rtl.l1mixo1[class][class] {
+.dir-rtl.header__search-tabs-filter-body-where-region[class][class] {
   padding: 0 44px 0 28px;
 }
-.dir-ltr.lvv0xp1[class][class] {
+.dir-ltr.header__search-tabs-filter-body-where-region-border[class][class] {
   border-left: 1px solid var(--d-nc-lt-s);
 }
-.dir-rtl.lvv0xp1[class][class] {
+.dir-rtl.header__search-tabs-filter-body-where-region-border[class][class] {
   border-right: 1px solid var(--d-nc-lt-s);
 }
-.dir-rtl.l18pj64x[class][class] {
+.dir-rtl.header__search-tabs-filter-body-where-region-label[class][class] {
   margin: 0 5px 28px 0;
 }
 @media (max-width: 849px) {
-  .d9jpnbz[class][class] {
+  .header__search-tabs-filter-body-where-region-item-contents[class][class] {
     grid-auto-rows: 0;
     grid-template-columns: repeat(2, min-content);
     grid-template-rows: repeat(2, min-content);
@@ -26531,7 +26531,7 @@ html :where(img[class*='wp-image-']) {
   visibility: hidden !important;
   opacity: 0 !important;
 }
-.c1nifi44[class][class] {
+.header__search-tabs-filter-body[class][class] {
   position: absolute;
   top: 100%;
   z-index: 1;
@@ -26541,14 +26541,14 @@ html :where(img[class*='wp-image-']) {
   overscroll-behavior: contain;
 }
 @media (min-width: 950px) {
-  .c1nifi44[class][class] {
+  .header__search-tabs-filter-body[class][class] {
     max-height: calc(100vh - 150px);
   }
 }
 .dir-ltr.l16t0m55[class][class] {
   left: 0;
 }
-.dir.c1nifi44[class][class] {
+.dir.header__search-tabs-filter-body[class][class] {
   background: var(--f-mkcy-f);
   border-radius: 32px;
   box-shadow: 0 0 0 1px rgb(0 0 0 / 4%), 0 8px 16px rgb(0 0 0 / 15%);
@@ -26561,21 +26561,21 @@ html :where(img[class*='wp-image-']) {
   margin: 0 -32px -8px !important;
   max-width: 848px !important;
 }
-.dir.l1mixo1[class][class] {
+.dir.header__search-tabs-filter-body-where-region[class][class] {
   margin: 8px 0 16px;
 }
-.dir-ltr.l1mixo1[class][class] {
+.dir-ltr.header__search-tabs-filter-body-where-region[class][class] {
   padding: 0 28px 0 44px;
 }
-.l18pj64x[class][class] {
+.header__search-tabs-filter-body-where-region-label[class][class] {
   font-size: 14px;
   font-weight: 700;
   line-height: 18px;
 }
-.dir-ltr.l18pj64x[class][class] {
+.dir-ltr.header__search-tabs-filter-body-where-region-label[class][class] {
   margin: 0 0 28px 5px;
 }
-.d9jpnbz[class][class] {
+.header__search-tabs-filter-body-where-region-item-contents[class][class] {
   -webkit-column-gap: 5px;
   column-gap: 5px;
   display: grid;
@@ -26585,11 +26585,11 @@ html :where(img[class*='wp-image-']) {
   grid-template-columns: repeat(3, min-content);
   row-gap: 24px;
 }
-.d1gxtg0q[class][class] {
+.header__search-tabs-filter-body-where-region-item[class][class] {
   height: 158px;
   width: 132px;
 }
-.cbt5pty[class][class] {
+.header__search-tabs-filter-body-where-region-item-content[class][class] {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -26600,10 +26600,10 @@ html :where(img[class*='wp-image-']) {
   height: 100%;
   width: 100%;
 }
-.dir.cbt5pty[class][class] {
+.dir.header__search-tabs-filter-body-where-region-item-content[class][class] {
   padding: 4px;
 }
-._bi7q1f {
+.header__search-tabs-filter-body-where-region-item-btn {
   cursor: pointer !important;
   text-align: center !important;
   border: 1px solid #ddd !important;
@@ -26625,7 +26625,7 @@ html :where(img[class*='wp-image-']) {
   width: 100% !important;
   -webkit-tap-highlight-color: transparent !important;
 }
-.i17d61fu[class][class] {
+.header__search-tabs-filter-body-where-region-item-img[class][class] {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -26647,7 +26647,7 @@ html :where(img[class*='wp-image-']) {
   top: 0;
   width: 100%;
 }
-._1x0xu65p {
+.header__search-tabs-filter-body-where-region-item-img-border {
   display: block !important;
   height: 0 !important;
   overflow: hidden !important;
@@ -26657,7 +26657,7 @@ html :where(img[class*='wp-image-']) {
   color: #222 !important;
   border: none !important;
 }
-._1x0xu65p::after {
+.header__search-tabs-filter-body-where-region-item-img-border::after {
   content: '' !important;
   width: calc(100% + 2px) !important;
   height: calc(100% + 2px) !important;
@@ -26670,7 +26670,7 @@ html :where(img[class*='wp-image-']) {
   border-width: 3px !important;
   border-radius: inherit !important;
 }
-.o11dhjqa[class][class] {
+.header__search-tabs-filter-body-where-region-item-text[class][class] {
   color: var(--f-k-smk-x);
   font-size: 14px;
   line-height: 18px;
@@ -26678,7 +26678,7 @@ html :where(img[class*='wp-image-']) {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-.dir.o11dhjqa[class][class] {
+.dir.header__search-tabs-filter-body-where-region-item-text[class][class] {
   margin: var(--fgg-f-l-a) var(--d-b-mrdy) 0 var(--d-b-mrdy);
 }
 ._1czersj {
