Rename header__search guests

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -10525,7 +10525,7 @@ h3:first-child {
   top: 4px !important;
   padding-right: 4px !important;
 }
-._14iponau {
+.header__search-tabs-filter-body-guests {
   -webkit-box-pack: justify !important;
   -webkit-box-align: center !important;
   color: #222 !important;
@@ -10537,27 +10537,27 @@ h3:first-child {
   padding-right: 4px !important;
 }
 @media (min-width: 744px) {
-  ._14iponau {
+  .header__search-tabs-filter-body-guests {
     min-width: 330px !important;
   }
 }
-._14iponau:not(:last-child) {
+.header__search-tabs-filter-body-guests:not(:last-child) {
   border-bottom: 1px solid #ebebeb !important;
 }
-._1hhulki {
+.header__search-tabs-filter-body-guests-label {
   margin-right: 5px !important;
 }
-._rtmzs6z {
+.header__search-tabs-filter-body-guests-title {
   font-size: 16px !important;
   line-height: 20px !important;
   font-weight: 600 !important;
   padding-bottom: 6px !important;
 }
-._ojavom {
+.header__search-tabs-filter-body-guests-btn-container {
   min-width: 104px !important;
   margin-left: 5px !important;
 }
-._3zlfom {
+.header__search-tabs-filter-body-guests-btn-content {
   -webkit-box-pack: justify !important;
   -webkit-box-align: center !important;
   display: inline-flex !important;
@@ -10572,7 +10572,7 @@ h3:first-child {
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
     'Helvetica Neue', sans-serif !important;
 }
-._ul9u8c {
+.header__search-tabs-filter-body-guests-btn {
   -webkit-box-pack: center !important;
   -webkit-box-align: center !important;
   -webkit-box-flex: 0 !important;
@@ -10598,7 +10598,7 @@ h3:first-child {
   background: #fff !important;
   border-radius: 50% !important;
 }
-._25sktq {
+.header__search-tabs-filter-body-guests-text {
   left: 0 !important;
   border: 0 !important;
   clip: rect(0, 0, 0, 0) !important;
@@ -17720,10 +17720,10 @@ h3:first-child {
 .dir.header__search-tabs-filter-body-date-container[class][class] {
   padding: 18px 28px 10px;
 }
-.gf0pxjh[class][class] {
+.header__search-tabs-filter-body-guests-container[class][class] {
   width: 342px;
 }
-.dir.gf0pxjh[class][class] {
+.dir.header__search-tabs-filter-body-guests-container[class][class] {
   padding: 0 6px;
 }
 .dir.fjmb2h[class][class] {
@@ -43197,7 +43197,7 @@ tr.show-desktop {
     font-weight: 600 !important;
   }
 }
-._3zlfom {
+.header__search-tabs-filter-body-guests-btn-content {
   -webkit-box-pack: justify !important;
   -ms-flex-pack: justify !important;
   -webkit-box-align: center !important;
@@ -43220,7 +43220,7 @@ tr.show-desktop {
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
     Helvetica Neue, sans-serif !important;
 }
-._ul9u8c {
+.header__search-tabs-filter-body-guests-btn {
   -webkit-box-pack: center !important;
   -ms-flex-pack: center !important;
   -webkit-box-align: center !important;
@@ -43259,31 +43259,31 @@ tr.show-desktop {
   background: #fff !important;
   border-radius: 50% !important;
 }
-._ul9u8c:disabled {
+.header__search-tabs-filter-body-guests-btn:disabled {
   cursor: not-allowed !important;
   color: #ebebeb !important;
   border-color: #ebebeb !important;
   background: #fff !important;
 }
 @media (hover: hover) {
-  ._ul9u8c:hover {
+  .header__search-tabs-filter-body-guests-btn:hover {
     color: #222 !important;
     border-color: #222 !important;
     background: #fff !important;
   }
 }
-._ul9u8c::-moz-focus-inner {
+.header__search-tabs-filter-body-guests-btn::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._ul9u8c:focus::-moz-focus-inner {
+.header__search-tabs-filter-body-guests-btn:focus::-moz-focus-inner {
   border: none !important;
 }
-._ul9u8c:-moz-focusring {
+.header__search-tabs-filter-body-guests-btn:-moz-focusring {
   outline: 0 !important;
 }
-._ul9u8c:focus-visible {
+.header__search-tabs-filter-body-guests-btn:focus-visible {
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
@@ -43293,13 +43293,13 @@ tr.show-desktop {
   box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._ul9u8c:focus-visible {
+  .header__search-tabs-filter-body-guests-btn:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._ul9u8c:focus[data-focus-visible-added] {
+.header__search-tabs-filter-body-guests-btn:focus[data-focus-visible-added] {
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
@@ -43309,18 +43309,18 @@ tr.show-desktop {
   box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._ul9u8c:focus[data-focus-visible-added] {
+  .header__search-tabs-filter-body-guests-btn:focus[data-focus-visible-added] {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._ul9u8c:disabled:hover {
+.header__search-tabs-filter-body-guests-btn:disabled:hover {
   color: #ebebeb !important;
   border-color: #ebebeb !important;
   background: #fff !important;
 }
-._25sktq {
+.header__search-tabs-filter-body-guests-text {
   left: 0 !important;
   border: 0 !important;
   clip: rect(0 0 0 0) !important;
@@ -45114,12 +45114,12 @@ tr.show-desktop {
   border-color: #ebebeb !important;
   background: #fff !important;
 }
-._8ovatg {
+.header__search-tabs-filter-body-guests-icon {
   height: 22px !important;
   width: 22px !important;
   padding: 5px !important;
 }
-._1665lvv {
+.header__search-tabs-filter-body-guests-count {
   position: relative !important;
   color: inherit !important;
   font-family: inherit !important;
@@ -48795,7 +48795,7 @@ tr.show-desktop {
   margin-top: 32px !important;
   padding-top: 32px !important;
 }
-._ebqknn {
+.header__search-tabs-filter-body-guests-desc {
   font-size: 14px !important;
   line-height: 18px !important;
   font-weight: 400 !important;
