--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13594,7 +13594,7 @@ fieldset[disabled] .btn {
 .mt2 {
   margin-top: 16px!important
 }
-._14tkmhr {
+.mr-2{
   margin-right: 8px!important
 }
 ._1cvivhm {
@@ -14974,7 +14974,7 @@ fieldset[disabled] .btn {
   font-weight: 600!important;
   padding-bottom: 24px!important
 }
-._7ytxmo {
+.tab__checkbox-mr-16 {
   margin-right: 16px
 }
 .c1mdj8k7[class][class] {
