--- a/src/css/global.css
+++ b/src/css/global.css
@@ -20,7 +20,7 @@
 .mt2 {
   margin-top: 16px!important
 }
-._14tkmhr {
+.mr-2{
   margin-right: 8px!important
 }
 ._1cvivhm {
@@ -1400,7 +1400,7 @@
   font-weight: 600!important;
   padding-bottom: 24px!important
 }
-._7ytxmo {
+.tab__checkbox-mr-16 {
   margin-right: 16px
 }
 .c1mdj8k7[class][class] {
