rename horizontal__line & tab__content-divider -> hr

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -14,7 +14,7 @@
   float: none;
   margin: 7px auto 0;
 }
-.horizontal__line {
+.hr {
   border-width: 1px 0 0 !important;
   border-top: 1px solid #ddd !important;
   margin: 0 !important;
@@ -26,7 +26,7 @@
   color: #222 !important;
   margin-bottom: 8px !important;
 }
-.tab__content-divider {
+.hr {
   border-width: 1px 0 0 !important;
   border-top: 1px solid #ddd !important;
 }
